--- a/Examples/Sources/Profile/ProfileIntroductionView.xib
+++ b/Examples/Sources/Profile/ProfileIntroductionView.xib
@@ -14,7 +14,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ProfileIntroductionView" customModule="TinyKitExamples" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="208"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="278"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bAp-kZ-RnZ">
@@ -30,23 +30,34 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K6r-vc-0kd">
+                    <rect key="frame" x="16" y="196" width="343" height="62.5"/>
+                    <string key="text">Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla. Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue.</string>
+                    <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="K6r-vc-0kd" secondAttribute="bottom" constant="20" id="2N1-Uo-nxl"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="K6r-vc-0kd" secondAttribute="trailing" constant="16" id="2SB-H1-GdD"/>
                 <constraint firstItem="kjw-53-UOW" firstAttribute="top" secondItem="bAp-kZ-RnZ" secondAttribute="bottom" constant="8" id="4SR-vo-6LM"/>
+                <constraint firstItem="K6r-vc-0kd" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="5D8-wO-Vvg"/>
+                <constraint firstItem="K6r-vc-0kd" firstAttribute="top" secondItem="kjw-53-UOW" secondAttribute="bottom" constant="8" id="KuA-t5-XyV"/>
                 <constraint firstItem="bAp-kZ-RnZ" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="QXg-r6-MLw"/>
                 <constraint firstItem="bAp-kZ-RnZ" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="20" id="Qe7-o4-SIn"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="kjw-53-UOW" secondAttribute="trailing" constant="16" id="ZGA-3j-2Vt"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="kjw-53-UOW" secondAttribute="bottom" constant="20" id="iAH-AS-tcg"/>
                 <constraint firstItem="kjw-53-UOW" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="uHT-Cs-07Y"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
+                <outlet property="introductionLabel" destination="K6r-vc-0kd" id="rcC-0r-v2t"/>
                 <outlet property="nameLabel" destination="kjw-53-UOW" id="5Yd-MQ-2je"/>
                 <outlet property="pictureImageView" destination="bAp-kZ-RnZ" id="0j0-IE-5df"/>
             </connections>
-            <point key="canvasLocation" x="35.5" y="-176"/>
+            <point key="canvasLocation" x="35.5" y="-142"/>
         </view>
     </objects>
 </document>
