--- a/Example/View/Message/UIMessageView.xib
+++ b/Example/View/Message/UIMessageView.xib
@@ -13,38 +13,52 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="UIMessageView" customModule="TinyKitExample" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="231.5"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="232"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Integer posuere erat a ante venenatis dapibus posuere velit aliquet." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ME3-SZ-Are">
-                    <rect key="frame" x="16" y="20" width="343" height="31.5"/>
-                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fgp-u0-CUW">
-                    <rect key="frame" x="16" y="59" width="343" height="152.5"/>
-                    <string key="text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla vitae elit libero, a pharetra augue. Donec ullamcorper nulla non metus auctor fringilla. Donec sed odio dui. Curabitur blandit tempus porttitor.</string>
-                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jMu-fK-POz">
+                    <rect key="frame" x="0.0" y="20.5" width="375" height="191.5"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Integer posuere erat a ante venenatis dapibus posuere velit aliquet." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h0p-Sp-6ZJ">
+                            <rect key="frame" x="16" y="0.0" width="343" height="31.5"/>
+                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qid-Dm-2Xi">
+                            <rect key="frame" x="16" y="39" width="343" height="152.5"/>
+                            <string key="text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla vitae elit libero, a pharetra augue. Donec ullamcorper nulla non metus auctor fringilla. Donec sed odio dui. Curabitur blandit tempus porttitor.</string>
+                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="h0p-Sp-6ZJ" secondAttribute="trailing" constant="16" id="6Bn-JP-dZB"/>
+                        <constraint firstItem="h0p-Sp-6ZJ" firstAttribute="leading" secondItem="fd3-a1-NuF" secondAttribute="leading" constant="16" id="H2q-fG-tPP"/>
+                        <constraint firstItem="qid-Dm-2Xi" firstAttribute="leading" secondItem="fd3-a1-NuF" secondAttribute="leading" constant="16" id="IST-ym-blX"/>
+                        <constraint firstItem="qid-Dm-2Xi" firstAttribute="top" secondItem="h0p-Sp-6ZJ" secondAttribute="bottom" constant="8" symbolic="YES" id="W1C-JS-Keg"/>
+                        <constraint firstItem="fd3-a1-NuF" firstAttribute="trailing" secondItem="qid-Dm-2Xi" secondAttribute="trailing" constant="16" id="Z1Q-mN-CrO"/>
+                        <constraint firstItem="fd3-a1-NuF" firstAttribute="bottom" secondItem="qid-Dm-2Xi" secondAttribute="bottom" id="ek3-IJ-ydp"/>
+                        <constraint firstItem="h0p-Sp-6ZJ" firstAttribute="top" secondItem="fd3-a1-NuF" secondAttribute="top" id="zQ2-4c-sdY"/>
+                    </constraints>
+                    <viewLayoutGuide key="safeArea" id="fd3-a1-NuF"/>
+                </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="fgp-u0-CUW" secondAttribute="trailing" constant="16" id="01y-Ni-GYi"/>
-                <constraint firstItem="fgp-u0-CUW" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="0Zv-DI-ibL"/>
-                <constraint firstItem="fgp-u0-CUW" firstAttribute="top" secondItem="ME3-SZ-Are" secondAttribute="bottom" constant="8" symbolic="YES" id="OFB-nY-ks7"/>
-                <constraint firstItem="ME3-SZ-Are" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="20" id="SYO-Kg-sLU"/>
-                <constraint firstAttribute="trailing" secondItem="ME3-SZ-Are" secondAttribute="trailing" constant="16" id="sG8-H0-wMs"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="fgp-u0-CUW" secondAttribute="bottom" constant="20" id="tax-Yu-mtm"/>
-                <constraint firstItem="ME3-SZ-Are" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="wUq-2S-Uw4"/>
+                <constraint firstItem="jMu-fK-POz" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="MgX-dm-Y6X"/>
+                <constraint firstItem="jMu-fK-POz" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="OWT-iR-Wg7"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="jMu-fK-POz" secondAttribute="bottom" constant="20" id="Zhn-YB-VGD"/>
+                <constraint firstItem="jMu-fK-POz" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="l7T-X1-g3U"/>
+                <constraint firstItem="jMu-fK-POz" firstAttribute="top" relation="greaterThanOrEqual" secondItem="vUN-kp-3ea" secondAttribute="top" constant="20" id="yLf-AT-LoG"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
-                <outlet property="textLabel" destination="fgp-u0-CUW" id="rLW-G7-msU"/>
-                <outlet property="titleLabel" destination="ME3-SZ-Are" id="Itx-yR-lKf"/>
+                <outlet property="textLabel" destination="qid-Dm-2Xi" id="HE3-CH-SuT"/>
+                <outlet property="titleLabel" destination="h0p-Sp-6ZJ" id="0ga-aA-uQ2"/>
             </connections>
             <point key="canvasLocation" x="115.5" y="-176"/>
         </view>
