--- a/TinyStore/Product/Detail/UIProductDescriptionView.xib
+++ b/TinyStore/Product/Detail/UIProductDescriptionView.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="UIProductTitleView" customModule="TinyStore" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="UIProductDescriptionView" customModule="TinyStore" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="96"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -39,18 +39,18 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="6lW-K9-l9e" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="4Lp-4A-48n"/>
+                <constraint firstItem="6lW-K9-l9e" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="4Lp-4A-48n"/>
                 <constraint firstItem="Imx-P8-yrx" firstAttribute="leading" secondItem="6lW-K9-l9e" secondAttribute="trailing" constant="12" id="9QE-7H-bE4"/>
-                <constraint firstItem="Imx-P8-yrx" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="9ZG-Ij-LnV"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Imx-P8-yrx" secondAttribute="trailing" constant="16" id="CbL-cT-801"/>
+                <constraint firstItem="Imx-P8-yrx" firstAttribute="bottom" secondItem="iN0-l3-epB" secondAttribute="bottom" id="9ZG-Ij-LnV"/>
+                <constraint firstAttribute="trailing" secondItem="Imx-P8-yrx" secondAttribute="trailing" constant="16" id="CbL-cT-801"/>
+                <constraint firstItem="85R-cL-xa0" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="GFO-2B-uN8"/>
                 <constraint firstItem="6lW-K9-l9e" firstAttribute="bottom" secondItem="Imx-P8-yrx" secondAttribute="bottom" id="W53-bL-bfS"/>
-                <constraint firstItem="85R-cL-xa0" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="Ybr-Ja-0sD"/>
                 <constraint firstItem="Imx-P8-yrx" firstAttribute="top" secondItem="85R-cL-xa0" secondAttribute="bottom" constant="16" id="doe-iy-ADJ"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="85R-cL-xa0" secondAttribute="trailing" constant="16" id="exD-UM-C8i"/>
-                <constraint firstItem="85R-cL-xa0" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="goz-Rl-nyx"/>
+                <constraint firstAttribute="trailing" secondItem="85R-cL-xa0" secondAttribute="trailing" constant="16" id="exD-UM-C8i"/>
+                <constraint firstItem="85R-cL-xa0" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="goz-Rl-nyx"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <viewLayoutGuide key="safeArea" id="Foc-zg-n0K"/>
             <connections>
                 <outlet property="actionContainerView" destination="Imx-P8-yrx" id="Jc5-z1-6uv"/>
                 <outlet property="subtitleLabel" destination="6lW-K9-l9e" id="Kyu-MF-ZSV"/>
