--- a/TinyStore/Product/Detail/UIProductDescriptionView.xib
+++ b/TinyStore/Product/Detail/UIProductDescriptionView.xib
@@ -44,10 +44,10 @@
                 <constraint firstItem="Imx-P8-yrx" firstAttribute="bottom" secondItem="iN0-l3-epB" secondAttribute="bottom" id="9ZG-Ij-LnV"/>
                 <constraint firstAttribute="trailing" secondItem="Imx-P8-yrx" secondAttribute="trailing" constant="16" id="CbL-cT-801"/>
                 <constraint firstItem="85R-cL-xa0" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="GFO-2B-uN8"/>
-                <constraint firstItem="6lW-K9-l9e" firstAttribute="bottom" secondItem="Imx-P8-yrx" secondAttribute="bottom" id="W53-bL-bfS"/>
                 <constraint firstItem="Imx-P8-yrx" firstAttribute="top" secondItem="85R-cL-xa0" secondAttribute="bottom" constant="16" id="doe-iy-ADJ"/>
                 <constraint firstAttribute="trailing" secondItem="85R-cL-xa0" secondAttribute="trailing" constant="16" id="exD-UM-C8i"/>
                 <constraint firstItem="85R-cL-xa0" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="goz-Rl-nyx"/>
+                <constraint firstItem="6lW-K9-l9e" firstAttribute="bottom" secondItem="Imx-P8-yrx" secondAttribute="bottom" id="xyP-an-Xic"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="Foc-zg-n0K"/>
