--- a/TinyStore/Product/Detail/UIProductGalleryView.xib
+++ b/TinyStore/Product/Detail/UIProductGalleryView.xib
@@ -15,16 +15,16 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="282"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2f5-85-xuQ">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="281.5"/>
-                </imageView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LnR-Gi-ced" customClass="TriangleView" customModule="NextBook" customModuleProvider="target">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LnR-Gi-ced" customClass="TriangleView" customModule="TinyStore" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="241.5" width="375" height="40"/>
                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="pn9-uu-FxN"/>
                     </constraints>
                 </view>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2f5-85-xuQ">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="281.5"/>
+                </imageView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
