--- a/TinyUI/Button/UIPrimaryButton.xib
+++ b/TinyUI/Button/UIPrimaryButton.xib
@@ -11,51 +11,45 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="UIPrimaryButton" customModule="TinyLanding" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="UIPrimaryButton" customModule="TinyUI" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="36"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iCZ-cC-gGF">
-                    <rect key="frame" x="65" y="8" width="245" height="44"/>
-                    <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nulla vitae elit libero, a pharetra augue. Vestibulum id ligula porta felis euismod semper. Donec sed odio dui." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Jc-Ln-o17">
-                            <rect key="frame" x="10" y="12" width="225" height="21"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ba7-U7-EpK">
-                            <rect key="frame" x="0.0" y="0.0" width="245" height="44"/>
-                        </button>
-                    </subviews>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nulla vitae elit libero, a pharetra augue. Vestibulum id ligula porta felis euismod semper. Donec sed odio dui." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Jc-Ln-o17">
+                    <rect key="frame" x="16" y="9.5" width="315" height="17"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DL7-cc-hx8">
+                    <rect key="frame" x="339" y="8" width="20" height="20"/>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="Ba7-U7-EpK" secondAttribute="bottom" id="KsK-I7-AMg"/>
-                        <constraint firstAttribute="trailing" secondItem="9Jc-Ln-o17" secondAttribute="trailing" constant="10" id="TVt-T3-1tk"/>
-                        <constraint firstAttribute="trailing" secondItem="Ba7-U7-EpK" secondAttribute="trailing" id="ak9-2C-ZBq"/>
-                        <constraint firstAttribute="height" constant="44" id="cgJ-vY-HdA"/>
-                        <constraint firstItem="Ba7-U7-EpK" firstAttribute="top" secondItem="iCZ-cC-gGF" secondAttribute="top" id="d5n-4H-2BN"/>
-                        <constraint firstItem="9Jc-Ln-o17" firstAttribute="leading" secondItem="iCZ-cC-gGF" secondAttribute="leading" constant="10" id="fc6-QP-50a"/>
-                        <constraint firstItem="9Jc-Ln-o17" firstAttribute="centerY" secondItem="iCZ-cC-gGF" secondAttribute="centerY" id="hsc-Ka-t7N"/>
-                        <constraint firstAttribute="width" priority="900" constant="245" id="tAn-cz-8dE"/>
-                        <constraint firstItem="Ba7-U7-EpK" firstAttribute="leading" secondItem="iCZ-cC-gGF" secondAttribute="leading" id="xQt-iw-kOy"/>
+                        <constraint firstAttribute="width" constant="20" id="pVd-Xg-imt"/>
+                        <constraint firstAttribute="height" constant="20" id="vef-rk-1MY"/>
                     </constraints>
-                </view>
+                </imageView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ba7-U7-EpK">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="36"/>
+                </button>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="iCZ-cC-gGF" secondAttribute="trailing" constant="20" id="BIp-3R-6lw"/>
-                <constraint firstItem="iCZ-cC-gGF" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="8" id="NAQ-DI-mT5"/>
-                <constraint firstItem="iCZ-cC-gGF" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="ZVM-g8-hyJ"/>
-                <constraint firstItem="iCZ-cC-gGF" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="poM-bs-llZ"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="iCZ-cC-gGF" secondAttribute="bottom" constant="8" id="sUM-Wp-Dop"/>
+                <constraint firstItem="DL7-cc-hx8" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="BGE-PA-isS"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Ba7-U7-EpK" secondAttribute="trailing" id="F8X-bH-Yzl"/>
+                <constraint firstItem="Ba7-U7-EpK" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="JAp-mO-PA0"/>
+                <constraint firstItem="9Jc-Ln-o17" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="LtD-CZ-vTY"/>
+                <constraint firstItem="Ba7-U7-EpK" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="Mma-I6-nwY"/>
+                <constraint firstItem="9Jc-Ln-o17" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="ePS-Nb-QCa"/>
+                <constraint firstItem="DL7-cc-hx8" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" constant="-16" id="f8s-fZ-ng9"/>
+                <constraint firstItem="DL7-cc-hx8" firstAttribute="leading" secondItem="9Jc-Ln-o17" secondAttribute="trailing" constant="8" id="j82-rX-4mH"/>
+                <constraint firstAttribute="bottom" secondItem="Ba7-U7-EpK" secondAttribute="bottom" id="qlC-1c-uph"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outlet property="actionButton" destination="Ba7-U7-EpK" id="iL8-21-1JV"/>
-                <outlet property="actionLabel" destination="9Jc-Ln-o17" id="uDq-gq-eyF"/>
-                <outlet property="actionView" destination="iCZ-cC-gGF" id="2wz-MK-avE"/>
+                <outlet property="iconImageView" destination="DL7-cc-hx8" id="1Tl-86-Oe8"/>
+                <outlet property="titleLabel" destination="9Jc-Ln-o17" id="aLM-Pk-Uc6"/>
             </connections>
             <point key="canvasLocation" x="10" y="55"/>
         </view>
